# mist_automation

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  fleet.yaml  prompt.md  requirements.txt
backend/: .coverage  .env  =4.0  CLAUDE.md  COMPLETE_TEST_RESULTS.md  README.md  SECURITY_REVIEW.md  TEST_RESULTS.md  WORKERS_IMPLEMENTATION.md  coverage.xml  openapi.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py  webhook_server.py
backend/app/api/v1/: about.py  admin.py  auth.py  automation.py  backup.py  backups.py  dashboard.py  digital_twin.py  impact_analysis.py  llm.py  power_scheduling.py  slack.py  system_health.py  telemetry.py  users.py  webhooks.py  workflows.py  ws.py
backend/app/core/: __init__.py  celery_app.py  database.py  exceptions.py  log_broadcaster.py  logger.py  middleware.py  pat.py  placeholder_utils.py  redis_client.py  security.py  smee_service.py  tasks.py  webhook_extractor.py  websocket.py
backend/app/data/: licenses.json
backend/app/models/: __init__.py  backup.py  execution.py  mixins.py  personal_access_token.py  session.py  system.py  user.py  webhook.py  workflow.py
backend/app/modules/: __init__.py
backend/app/modules/automation/: CLAUDE.md  api_catalog.py  device_utils_catalog.py  event_pairs.py  router.py  router_recipes.py  seed_recipes.py  webhook_router.py
backend/app/modules/automation/models/: aggregation.py  execution.py  recipe.py  webhook.py  workflow.py
backend/app/modules/automation/schemas/: recipe.py  webhook.py  workflow.py
backend/app/modules/automation/services/: executor_service.py  graph_validator.py  node_schema_service.py  oas_service.py  oauth_secrets.py  suggestion_service.py  workflow_service.py
backend/app/modules/automation/workers/: aggregation_worker.py  cleanup_worker.py  cron_worker.py  notification_helper.py  scheduler.py  webhook_worker.py
backend/app/modules/backup/: models.py  object_registry.py  reference_map.py  router.py  schemas.py  utils.py  webhook_handler.py  webhook_router.py  workers.py
backend/app/modules/backup/migrations/: backfill_references.py
backend/app/modules/backup/services/: backup_logger.py  backup_service.py  git_service.py  restore_service.py  smee_service.py
backend/app/modules/digital_twin/: CLAUDE.md  SKILL.md  __init__.py  models.py  schemas.py
backend/app/modules/digital_twin/checks/: config_conflicts.py  connectivity.py  port_impact.py  routing.py  security.py  stp.py  template_checks.py
backend/app/modules/digital_twin/services/: __init__.py  config_checks.py  (+20 more)
backend/app/modules/impact_analysis/: CLAUDE.md  README.md  change_group.py  models.py  router.py  schemas.py
backend/app/modules/llm/: CLAUDE.md  memory_constants.py  models.py  router.py  schemas.py
backend/app/modules/mcp_server/: CLAUDE.md  auth_middleware.py  helpers.py  server.py
backend/app/modules/power_scheduling/: __init__.py  models.py  router.py  state.py
backend/app/modules/reports/: CLAUDE.md  models.py  router.py  schemas.py
backend/app/modules/telemetry/: CLAUDE.md  __init__.py  router.py  schemas.py
backend/app/schemas/: __init__.py  admin.py  auth.py  backup.py  personal_access_token.py  user.py
backend/app/services/: __init__.py  auth_service.py  backup_service.py  executor_service.py  git_service.py  mist_service.py  mist_service_factory.py  notification_service.py  passkey_service.py  restore_service.py  workflow_service.py
backend/app/utils/: __init__.py  db_helpers.py  event_definitions.py  filters.py  url_safety.py  validators.py  variables.py  webhook_validator.py
backend/app/workers/: __init__.py  backup_worker.py  cron_worker.py  scheduler.py  webhook_worker.py
backend/migrations/: 20260412_rename_llm_chat_to_mcp.py  __init__.py
backend/mist_automation_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/scripts/: fix_duplicate_versions.py  generate_api_catalog.py  repair_deleted_backup_timestamps.py  seed_digital_twin_simulations.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_digital_twin_api.py  test_power_scheduling_api.py  test_workflows_api.py
backend/tests/unit/: test_activate_skill_tool.py  test_admin_sensitive_fields.py  test_admin_validators.py  test_ap_extractor.py  test_audit_query.py  test_backup_restore_api.py  test_backup_tool_helpers.py  test_backup_version_consistency.py  test_canvas_config.py  test_canvas_tier_detection.py  test_check_observability_contract.py  test_check_second_pass_fixes.py  test_cleanup_worker.py  test_client_extractor.py  test_compaction.py  test_compaction_budget.py  test_config_checks.py  test_config_compiler.py  test_config_conflict_checks.py  test_configuration_schema_tool.py  test_cov_filter.py  test_digital_twin_logs_endpoint.py  test_digital_twin_models.py  test_digital_twin_schemas.py  test_endpoint_parser.py  test_executor_helpers.py  test_executor_service.py  test_extract_object_info.py  test_filters.py  test_gateway_extractor.py  test_global_chat_regressions.py  test_graph_validator.py  test_impact_analysis_chat_context.py  test_influxdb_service.py  test_ingestion_service.py  test_ip_allowlist.py  test_l2_checks.py  test_label_resolver.py  test_latest_client_cache.py  test_latest_value_cache.py  (+74 more)
backend/tests/unit/test_power_scheduling/: test_eligibility.py  test_models.py  test_rrm_service.py  test_scheduling_service.py  test_state.py  test_worker.py
(+465 files in other folders)
